tdf#166994 Don't remove image from cache too quickly

While an animation is running, the same images are drawn in a
repeating cycle but each frame is removed from the cache before
it is drawn again.

Blending a bitmap with an alpha channel can be very slow so
it is much faster to keep all of the frames in the image cache.
So, allow the image cache to temporarily increase in size by
deferring removal of an image if it was cached within the last
few seconds.

Change-Id: I24d4b6a630671374227b60d6ee274443aee2332e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/187790
Reviewed-by: Patrick Luby <guibomacdev@gmail.com>
Tested-by: Jenkins